--- a/styles.css
+++ b/styles.css
@@ -263,10 +263,31 @@
 
 
   .details{
-    margin: 2rem 0 ;
-    padding: 0 1rem ;
-    background-color: blueviolet;
+    margin: 7rem ;
+    padding: 4rem ;
+    position: relative;
+    
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
    }
+
+
+  .post{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    width: 80%;
+    margin: 2rem auto;
+    padding: 2rem 4rem;
+   
+  }
+
+
+
 
 
   .title-details{
